Edit Profile Change Pass ContactUs TroubleShoot

--- a/app/src/main/res/drawable/ic_camera.xml
+++ b/app/src/main/res/drawable/ic_camera.xml
@@ -1,35 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="18dp"
-    android:height="18dp"
-    android:viewportWidth="18"
-    android:viewportHeight="18">
-  <group>
-    <clip-path
-        android:pathData="M0,0h18v18h-18z"/>
-    <path
-        android:pathData="M5.25,4.5C4.335,4.503 3.828,4.525 3.412,4.7C2.828,4.945 2.353,5.397 2.076,5.971C1.85,6.44 1.813,7.041 1.738,8.243L1.622,10.126C1.438,13.114 1.346,14.608 2.223,15.554C3.1,16.5 4.577,16.5 7.531,16.5H10.469C13.423,16.5 14.9,16.5 15.777,15.554C16.654,14.608 16.562,13.114 16.378,10.126L16.261,8.243C16.187,7.041 16.15,6.44 15.924,5.971C15.646,5.397 15.172,4.945 14.589,4.7C14.172,4.525 13.665,4.503 12.75,4.5"
-        android:strokeWidth="1.5"
-        android:fillColor="#00000000"
-        android:strokeColor="#010D15"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M12.75,5.25L12.086,3.589C11.799,2.872 11.55,2.06 10.813,1.695C10.419,1.5 9.946,1.5 9,1.5C8.054,1.5 7.581,1.5 7.188,1.695C6.45,2.06 6.201,2.872 5.914,3.589L5.25,5.25"
-        android:strokeLineJoin="round"
-        android:strokeWidth="1.5"
-        android:fillColor="#00000000"
-        android:strokeColor="#010D15"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M11.625,10.5C11.625,11.95 10.45,13.125 9,13.125C7.55,13.125 6.375,11.95 6.375,10.5C6.375,9.05 7.55,7.875 9,7.875C10.45,7.875 11.625,9.05 11.625,10.5Z"
-        android:strokeWidth="1.5"
-        android:fillColor="#00000000"
-        android:strokeColor="#EF5C0A"/>
-    <path
-        android:pathData="M9,4.5H9.007"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2"
-        android:fillColor="#00000000"
-        android:strokeColor="#010D15"
-        android:strokeLineCap="round"/>
-  </group>
+    android:width="25dp"
+    android:height="24dp"
+    android:viewportWidth="25"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M8.025,4.001C8.025,3.449 8.439,3 8.951,3H15.124C15.636,3 16.05,3.449 16.05,4.001C16.05,4.553 15.636,5.001 15.124,5.001H8.951C8.439,5.001 8.025,4.553 8.025,4.001ZM9.809,21.004H14.267C17.397,21.004 18.963,21.004 20.088,20.282C20.572,19.972 20.99,19.57 21.318,19.099C22.069,18.018 22.069,16.513 22.069,13.503C22.069,10.492 22.069,8.988 21.317,7.906C20.989,7.435 20.571,7.033 20.088,6.723C18.963,6.001 17.397,6.001 14.267,6.001H9.809C6.678,6.001 5.112,6.001 3.987,6.723C3.504,7.033 3.086,7.436 2.759,7.906C2.006,8.987 2.006,10.492 2.006,13.501V13.503C2.006,16.513 2.006,18.017 2.758,19.099C3.083,19.567 3.5,19.969 3.987,20.282C5.112,21.004 6.678,21.004 9.809,21.004ZM7.858,13.503C7.858,11.282 9.729,9.484 12.038,9.484C14.346,9.484 16.218,11.283 16.218,13.503C16.218,15.722 14.345,17.521 12.038,17.521C9.729,17.521 7.858,15.721 7.858,13.503ZM9.53,13.503C9.53,12.17 10.653,11.092 12.038,11.092C13.422,11.092 14.545,12.171 14.545,13.503C14.545,14.834 13.422,15.913 12.038,15.913C10.653,15.913 9.53,14.834 9.53,13.503ZM18.168,9.484C17.706,9.484 17.332,9.844 17.332,10.288C17.332,10.731 17.706,11.091 18.168,11.091H18.726C19.187,11.091 19.561,10.731 19.561,10.288C19.561,9.844 19.187,9.484 18.726,9.484H18.168Z"
+      android:fillColor="#ffffff"
+      android:fillType="evenOdd"/>
 </vector>
