--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,4 +70,9 @@
         <item name="cornerSize">50%</item> <!-- 50% makes it perfectly circular -->
     </style>
 
+    <style name="ImageCorner_12" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">@dimen/dp_12</item> <!-- 50% makes it perfectly circular -->
+    </style>
+
 </resources>
