Profile screen and click

--- a/app/src/main/res/layout/activity_forgot_password_option.xml
+++ b/app/src/main/res/layout/activity_forgot_password_option.xml
@@ -53,129 +53,111 @@
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintTop_toBottomOf="@id/tvLabel" />
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardEmail"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
+        android:padding="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_32"
-        app:cardCornerRadius="@dimen/dp_16"
-        app:cardBackgroundColor="@color/transparent"
-        app:strokeWidth="@dimen/dp_1"
-        app:strokeColor="@color/color_716569"
+        android:background="@drawable/bg_rounded_border_corners_12"
         app:layout_constraintTop_toBottomOf="@id/tvMessage"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintEnd_toEndOf="@id/glEnd">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ivEmailIcon"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dp_16">
+            android:src="@drawable/ic_email"
+            android:padding="@dimen/dp_10"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivEmailIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_email"
-                android:padding="@dimen/dp_10"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvEmailLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lbl_email"
+            android:textSize="@dimen/sp_14"
+            app:textStyle="bold"
+            android:textColor="@color/colorText_263238"
+            android:layout_marginStart="@dimen/dp_16"
+            app:layout_constraintStart_toEndOf="@id/ivEmailIcon"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-            <com.basalbody.app.utils.BasalTextView
-                android:id="@+id/tvEmailLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lbl_email"
-                android:textSize="@dimen/sp_14"
-                app:textStyle="bold"
-                android:textColor="@color/colorText_263238"
-                android:layout_marginStart="@dimen/dp_16"
-                app:layout_constraintStart_toEndOf="@id/ivEmailIcon"
-                app:layout_constraintTop_toTopOf="parent"/>
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvEmailValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="****@gmail.com"
+            android:textSize="@dimen/sp_12"
+            android:layout_marginTop="@dimen/dp_4"
+            app:layout_constraintStart_toStartOf="@id/tvEmailLabel"
+            app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>
 
-            <com.basalbody.app.utils.BasalTextView
-                android:id="@+id/tvEmailValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="****@gmail.com"
-                android:textSize="@dimen/sp_12"
-                android:layout_marginTop="@dimen/dp_4"
-                app:layout_constraintStart_toStartOf="@id/tvEmailLabel"
-                app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ivEmailSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_unselect"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivEmailSelect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_unselect"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
-
-    <com.google.android.material.card.MaterialCardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cardPhone"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
-        app:cardCornerRadius="@dimen/dp_16"
-        app:cardBackgroundColor="@color/transparent"
-        app:strokeWidth="@dimen/dp_1"
-        app:strokeColor="@color/color_716569"
+        android:padding="@dimen/dp_16"
+        android:background="@drawable/bg_rounded_border_corners_12"
         app:layout_constraintTop_toBottomOf="@id/cardEmail"
         app:layout_constraintStart_toStartOf="@id/glStart"
         app:layout_constraintEnd_toEndOf="@id/glEnd">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ivPhoneIcon"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/dp_16">
+            android:src="@drawable/ic_call"
+            android:padding="@dimen/dp_10"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivPhoneIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_call"
-                android:padding="@dimen/dp_10"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvPhoneLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lbl_phone_number"
+            android:textSize="@dimen/sp_14"
+            app:textStyle="bold"
+            android:textColor="@color/colorText_263238"
+            android:layout_marginStart="@dimen/dp_16"
+            app:layout_constraintStart_toEndOf="@id/ivPhoneIcon"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-            <com.basalbody.app.utils.BasalTextView
-                android:id="@+id/tvPhoneLabel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/lbl_phone_number"
-                android:textSize="@dimen/sp_14"
-                app:textStyle="bold"
-                android:textColor="@color/colorText_263238"
-                android:layout_marginStart="@dimen/dp_16"
-                app:layout_constraintStart_toEndOf="@id/ivPhoneIcon"
-                app:layout_constraintTop_toTopOf="parent"/>
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvPhoneValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="**** 2345"
+            android:textSize="@dimen/sp_12"
+            android:layout_marginTop="@dimen/dp_4"
+            app:layout_constraintStart_toStartOf="@id/tvPhoneLabel"
+            app:layout_constraintTop_toBottomOf="@id/tvPhoneLabel"/>
 
-            <com.basalbody.app.utils.BasalTextView
-                android:id="@+id/tvPhoneValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="**** 2345"
-                android:textSize="@dimen/sp_12"
-                android:layout_marginTop="@dimen/dp_4"
-                app:layout_constraintStart_toStartOf="@id/tvPhoneLabel"
-                app:layout_constraintTop_toBottomOf="@id/tvPhoneLabel"/>
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/ivPhoneSelect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_select"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ivPhoneSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_select"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnResetPass"
