--- a/app/src/main/res/layout/activity_forgot_password_option.xml
+++ b/app/src/main/res/layout/activity_forgot_password_option.xml
@@ -11,14 +11,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/dp_25" />
+        app:layout_constraintGuide_begin="@dimen/dp_24" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/dp_25" />
+        app:layout_constraintGuide_end="@dimen/dp_24" />
 
     <include
         android:id="@+id/llToolBar"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_58"
         android:text="@string/lbl_forgot_password_que"
-        android:textColor="@color/colorText_4B4B4B"
+        android:textColor="@color/black"
         android:textSize="@dimen/sp_24"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
@@ -59,8 +59,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_32"
         app:cardCornerRadius="@dimen/dp_16"
-        app:cardBackgroundColor="@color/transparent"
-        app:strokeWidth="@dimen/dp_1"
+        app:strokeWidth="0.5dp"
+        app:contentPadding="@dimen/dp_16"
         app:strokeColor="@color/color_716569"
         app:layout_constraintTop_toBottomOf="@id/tvMessage"
         app:layout_constraintStart_toStartOf="@id/glStart"
@@ -68,8 +68,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/dp_16">
+            android:layout_height="wrap_content">
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/ivEmailIcon"
@@ -121,8 +120,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
         app:cardCornerRadius="@dimen/dp_16"
-        app:cardBackgroundColor="@color/transparent"
-        app:strokeWidth="@dimen/dp_1"
+        app:strokeWidth="0.5dp"
         app:strokeColor="@color/color_716569"
         app:layout_constraintTop_toBottomOf="@id/cardEmail"
         app:layout_constraintStart_toStartOf="@id/glStart"
