--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -107,6 +107,7 @@
     <dimen name="dp_130">130dp</dimen>
     <dimen name="dp_150">150dp</dimen>
     <dimen name="dp_155">155dp</dimen>
+    <dimen name="dp_163">163dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_225">225dp</dimen>
     <dimen name="dp_250">250dp</dimen>
