Add custom text color selector for bottom nav
Introduces bnv_item_text_color.xml to define active/inactive text colors for bottom navigation items. Updates activity_home.xml to use the new selector and removes textColor from BNVTextStyleActive/Inactive in themes.xml for better separation of style and color.

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,6 +30,8 @@
         app:itemTextAppearanceActive="@style/BNVTextStyleActive"
         app:itemTextAppearanceInactive="@style/BNVTextStyleInactive"
         app:labelVisibilityMode="labeled"
+        app:itemIconTint="@null"
+        app:itemTextColor="@color/bnv_item_text_color"
         app:menu="@menu/bottom_menu"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
