Connect Bluetooth device FAQ

--- a/app/src/main/res/layout/activity_connected_bluetooth_device.xml
+++ b/app/src/main/res/layout/activity_connected_bluetooth_device.xml
@@ -29,4 +29,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvConnectedDevices"
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="@dimen/dp_0"
+        android:clipToPadding="false"
+        android:layout_marginTop="@dimen/dp_25"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/glEnd"
+        app:layout_constraintStart_toStartOf="@id/glStart"
+        app:layout_constraintTop_toBottomOf="@id/llToolBar"
+        tools:itemCount="3"
+        tools:listitem="@layout/each_row_connected_bluetooth_devices" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
