--- a/app/src/main/res/layout/basal_text_field.xml
+++ b/app/src/main/res/layout/basal_text_field.xml
@@ -20,9 +20,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_5"
         android:background="@drawable/bg_app_text_field"
         android:paddingVertical="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,21 +48,39 @@
             app:layout_constraintStart_toEndOf="@id/imgStartDrawable"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.basalbody.app.utils.BasalTextView
+            android:id="@+id/tvPhoneNumberCode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_12"
+            android:drawableEnd="@drawable/ic_dropdown_18"
+            android:paddingVertical="@dimen/dp_5"
+            android:text="+852"
+            android:textColor="@color/black"
+            android:visibility="gone"
+            android:textSize="@dimen/sp_16"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/divider"
+            app:layout_constraintTop_toTopOf="parent"
+            app:textStyle="normal" />
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edtField"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/dp_10"
+            android:layout_marginEnd="@dimen/dp_10"
+            android:layout_marginStart="@dimen/dp_22"
+            app:layout_goneMarginStart="@dimen/dp_10"
             android:background="@color/transparent"
             android:fontFamily="@font/geist_regular"
             android:maxLines="1"
             android:paddingVertical="@dimen/dp_6"
-            android:textColorHint="@color/color_edittext_hint"
             android:textColor="@color/color_edittext_text"
+            android:textColorHint="@color/color_edittext_hint"
             android:textSize="@dimen/sp_14"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/imgEndDrawable"
-            app:layout_constraintStart_toEndOf="@id/divider"
+            app:layout_constraintStart_toEndOf="@id/tvPhoneNumberCode"
             app:layout_constraintTop_toTopOf="parent"
             tools:hint="Enter your email here"
             tools:ignore="Autofill,LabelFor,TextFields" />
@@ -72,10 +90,10 @@
             android:layout_width="@dimen/dp_24"
             android:layout_height="@dimen/dp_24"
             android:layout_marginStart="@dimen/dp_16"
+            android:layout_marginEnd="@dimen/dp_20"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/dp_20"
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/avatars" />
 
