--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -83,6 +83,7 @@
         style="@style/FilledButtonTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/geist_regular"
         android:text="@string/button_update"
         android:layout_marginBottom="@dimen/dp_30"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
