--- a/app/src/main/res/layout/activity_contact_support.xml
+++ b/app/src/main/res/layout/activity_contact_support.xml
@@ -81,8 +81,7 @@
         android:gravity="top|start"
         android:hint="@string/hint_enter_your_comment_here"
         android:inputType="textMultiLine"
-        android:maxLines="5"
-        android:minLines="5"
+        android:minLines="7"
         android:padding="@dimen/dp_17"
         android:textColor="@color/color_edittext_text"
         android:textColorHint="@color/color_edittext_hint"
@@ -97,6 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_30"
+        android:fontFamily="@font/geist_regular"
         android:text="@string/btn_submit"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
         app:layout_constraintStart_toStartOf="@id/glStart"
