--- a/app/src/main/res/layout/activity_details_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/activity_details_bottom_sheet_dialog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/constraintMain"
-    android:background="@drawable/bottomsheet_bg"
+    android:background="@drawable/bottom_sheet_bg"
     android:padding="@dimen/dp_20">
 
     <androidx.appcompat.widget.AppCompatImageView
