--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -11,23 +11,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/dp_25" />
+        app:layout_constraintGuide_begin="@dimen/dp_24" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/glEnd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/dp_25" />
+        app:layout_constraintGuide_end="@dimen/dp_24" />
 
     <include
         android:id="@+id/llToolBar"
         layout="@layout/view_toolbar"
         android:layout_width="@dimen/dp_0"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/llSearch"
@@ -35,8 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_25"
         android:background="@drawable/bg_search_text_field"
-        app:layout_constraintStart_toStartOf="@+id/glStart"
         app:layout_constraintEnd_toEndOf="@+id/glEnd"
+        app:layout_constraintStart_toStartOf="@+id/glStart"
         app:layout_constraintTop_toBottomOf="@+id/llToolBar">
 
         <androidx.appcompat.widget.AppCompatEditText
@@ -45,39 +45,29 @@
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:fontFamily="@font/geist_regular"
-            android:maxLines="1"
-            android:padding="@dimen/dp_16"
-            android:textColorHint="@color/color_edittext_hint"
-            android:textColor="@color/color_edittext_text"
-            android:textSize="@dimen/sp_16"
             android:hint="Search anything..."
             android:imeOptions="actionDone"
             android:inputType="text"
+            android:maxLines="1"
+            android:padding="@dimen/dp_16"
+            android:textColor="@color/color_edittext_text"
+            android:textColorHint="@color/color_edittext_hint"
+            android:textSize="@dimen/sp_16"
+            app:layout_constraintEnd_toStartOf="@+id/imgSearch"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/llSearchIcon"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/llSearchIcon"
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imgSearch"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_0"
-            android:background="@drawable/bg_search_icon"
-            app:layout_constraintTop_toTopOf="@+id/edtSearch"
-            app:layout_constraintBottom_toBottomOf="@+id/edtSearch"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_search"
-                android:adjustViewBounds="true"
-                android:padding="@dimen/dp_13"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content"
+            android:background="@color/colorPinkDC3556"
+            android:src="@drawable/ic_search"
+            app:contentPadding="@dimen/dp_15"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearance="@style/TopRightBottomRight15dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -85,8 +75,8 @@
         android:id="@+id/rvFaq"
         android:layout_width="@dimen/dp_0"
         android:layout_height="@dimen/dp_0"
-        android:clipToPadding="false"
         android:layout_marginTop="@dimen/dp_25"
+        android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
