--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -78,6 +78,7 @@
         app:btf_hint="@string/hint_enter_phone_no_here"
         app:btf_imeOptions="actionDone"
         app:btf_inputType="number"
+        app:btf_isMobile="true"
         app:btf_labelText="@string/lbl_phone_number"
         app:btf_maxLength="10"
         app:layout_constraintEnd_toEndOf="@id/glEnd"
