--- a/app/src/main/res/layout/bottom_sheet_dialog_limited_access_images_picker.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_limited_access_images_picker.xml
@@ -6,7 +6,7 @@
         android:id="@+id/constraintMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bottomsheet_bg"
+        android:background="@drawable/bottom_sheet_bg"
         android:backgroundTint="@color/color_peach_extra_light"
         android:orientation="vertical">
 
