--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:animateLayoutChanges="true"
     tools:context=".ui.home.fragment.HomeFragment">
 
     <androidx.constraintlayout.widget.Guideline
