--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="colorB3B3B3">#B3B3B3</color>
     <color name="color737373">#737373</color>
     <color name="color888888">#888888</color>
+    <color name="colorFFF3ED">#FFF3ED</color>
 
 
 
