--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,7 +17,7 @@
     </style>
 
     <style name="AppModalStylePicker" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@drawable/bottomsheet_bg</item>
+        <item name="android:background">@drawable/bottom_sheet_bg</item>
         <item name="android:backgroundTint">@color/color_peach_extra_light</item>
     </style>
 
@@ -62,6 +62,15 @@
     <style name="Rounded" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item> <!-- 50% makes it perfectly circular -->
+    </style>
+
+    <style name="TopRightBottomRight15dp" parent="ShapeAppearance.MaterialComponents.SmallComponent">
+        <item name="cornerFamilyTopRight">rounded</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+        <item name="cornerSizeTopRight">@dimen/dp_15</item>
+        <item name="cornerSizeBottomRight">@dimen/dp_15</item>
+        <item name="cornerSizeTopLeft">0dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
     </style>
 
     <style name="ImageCorner_12" parent="ShapeAppearance.MaterialComponents.SmallComponent">
