Add CCP Intro images change Forgot pass option value remove

--- a/app/src/main/res/layout/activity_forgot_password_option.xml
+++ b/app/src/main/res/layout/activity_forgot_password_option.xml
@@ -90,7 +90,8 @@
                 android:textColor="@color/colorText_263238"
                 android:layout_marginStart="@dimen/dp_16"
                 app:layout_constraintStart_toEndOf="@id/ivEmailIcon"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <com.basalbody.app.utils.BasalTextView
                 android:id="@+id/tvEmailValue"
@@ -99,6 +100,7 @@
                 tools:text="****@gmail.com"
                 android:textSize="@dimen/sp_12"
                 android:layout_marginTop="@dimen/dp_4"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@id/tvEmailLabel"
                 app:layout_constraintTop_toBottomOf="@id/tvEmailLabel"/>
 
@@ -151,7 +153,8 @@
                 android:textColor="@color/colorText_263238"
                 android:layout_marginStart="@dimen/dp_16"
                 app:layout_constraintStart_toEndOf="@id/ivPhoneIcon"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <com.basalbody.app.utils.BasalTextView
                 android:id="@+id/tvPhoneValue"
@@ -160,6 +163,7 @@
                 tools:text="**** 2345"
                 android:textSize="@dimen/sp_12"
                 android:layout_marginTop="@dimen/dp_4"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@id/tvPhoneLabel"
                 app:layout_constraintTop_toBottomOf="@id/tvPhoneLabel"/>
 
