--- a/app/src/main/res/layout/basal_text_field.xml
+++ b/app/src/main/res/layout/basal_text_field.xml
@@ -64,6 +64,16 @@
             app:layout_constraintTop_toTopOf="parent"
             app:textStyle="normal" />
 
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/ccp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/divider"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/edtField"
             android:layout_width="0dp"
