UI fixes and made changes as per requirement

--- a/app/src/main/res/layout/month_calender_day_view.xml
+++ b/app/src/main/res/layout/month_calender_day_view.xml
@@ -61,5 +61,15 @@
         app:layout_constraintStart_toEndOf="@id/dotIntercourse"
         app:layout_constraintTop_toBottomOf="@id/tvMonthDay" />
 
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/dp_6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvMonthDay"
+        android:layout_marginTop="@dimen/dp_4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
