--- a/app/src/main/res/drawable/ic_open_eye.xml
+++ b/app/src/main/res/drawable/ic_open_eye.xml
@@ -1,16 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
-    android:viewportWidth="20"
-    android:viewportHeight="20">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M17.953,9.204C18.207,9.559 18.333,9.737 18.333,10C18.333,10.263 18.207,10.441 17.953,10.796C16.815,12.392 13.908,15.833 10,15.833C6.092,15.833 3.185,12.392 2.047,10.796C1.793,10.441 1.667,10.263 1.667,10C1.667,9.737 1.793,9.559 2.047,9.204C3.185,7.608 6.092,4.167 10,4.167C13.908,4.167 16.815,7.608 17.953,9.204Z"
+      android:pathData="M15.58,12C15.58,13.98 13.98,15.58 12,15.58C10.02,15.58 8.42,13.98 8.42,12C8.42,10.02 10.02,8.42 12,8.42C13.98,8.42 15.58,10.02 15.58,12Z"
+      android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#010D15"/>
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
   <path
-      android:pathData="M12.5,10C12.5,8.619 11.381,7.5 10,7.5C8.619,7.5 7.5,8.619 7.5,10C7.5,11.381 8.619,12.5 10,12.5C11.381,12.5 12.5,11.381 12.5,10Z"
+      android:pathData="M12,20.27C15.53,20.27 18.82,18.19 21.11,14.59C22.01,13.18 22.01,10.81 21.11,9.4C18.82,5.8 15.53,3.72 12,3.72C8.47,3.72 5.18,5.8 2.89,9.4C1.99,10.81 1.99,13.18 2.89,14.59C5.18,18.19 8.47,20.27 12,20.27Z"
+      android:strokeLineJoin="round"
       android:strokeWidth="1.5"
       android:fillColor="#00000000"
-      android:strokeColor="#EF5C0A"/>
+      android:strokeColor="#292D32"
+      android:strokeLineCap="round"/>
 </vector>
