--- a/app/src/main/res/layout/view_toolbar.xml
+++ b/app/src/main/res/layout/view_toolbar.xml
@@ -63,7 +63,8 @@
                 android:gravity="center"
                 android:includeFontPadding="false"
                 android:textColor="@color/black"
-                android:padding="@dimen/dp_4"
+                android:paddingVertical="@dimen/dp_15"
+                android:paddingHorizontal="@dimen/dp_5"
                 android:textSize="@dimen/sp_18"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/dp_20"
                 android:padding="@dimen/dp_4"
+                tools:src="@drawable/ic_search_calender"
                 app:layout_constraintBottom_toBottomOf="@+id/ivBack"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/ivBack" />
